# scikit-build-core-conan

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: cd.yml  ci.yml  release.yml
src/scikit_build_core_conan/: __init__.py
tests/: conftest.py  test_pyproject_pep660.py
